<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_settings"
            app:suffixText="|">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_background"
                android:hint="@string/data_for_search_info"
                android:text="@string/star_gate"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutSearch"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutSearch"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch"
            app:spanCount="2"
            tools:listitem="@layout/item_movie" />

        <ProgressBar
            android:id="@+id/progressBarSearch"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

        <TextView
            android:id="@+id/textViewNothingFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginTop="100dp"
            android:text="@string/not_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParams"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <View
            android:id="@+id/line9"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_button_group" />

        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSearchVisible" />

        <ImageButton
            android:id="@+id/buttonSearchVisible"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/textViewParamsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_search"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSearchVisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonSearchVisible" />

        <TextView
            android:id="@+id/textViewSortTypeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/show_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/type_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:checkedButton="@id/type_left_button"
            app:layout_constraintTop_toBottomOf="@+id/textViewSortTypeInfo"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/type_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/all_info"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/type_center_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/movie_info"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/type_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/seriales_info"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_button_group" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/year_info"
            app:layout_constraintStart_toStartOf="@+id/line5"
            app:layout_constraintTop_toBottomOf="@+id/line5" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/yearsSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:stepSize="1"
            android:valueFrom="1950"
            android:valueTo="2023"
            app:labelBehavior="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:thumbColor="@color/white"
            app:thumbStrokeWidth="1dp"
            app:tickVisible="false"
            app:trackColorActive="#3D3BFF"
            app:trackColorInactive="#838390"
            app:values="@array/years_slider" />

        <View
            android:id="@+id/line7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearsSeekBar" />

        <View
            android:id="@+id/line8"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingSeekBar" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/ratingSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="10"
            app:labelBehavior="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:thumbColor="@color/white"
            app:thumbStrokeWidth="1dp"
            app:tickVisible="true"
            app:trackColorActive="#3D3BFF"
            app:trackColorInactive="#838390"
            app:values="@array/rating_slider" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sorted_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line8" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/sort_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:checkedButton="@id/sort_left_button"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/date_info"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_center_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/popular_info_button"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/tab_background_selector"
                android:text="@string/rating_info_button"
                android:textColor="@drawable/tab_text_color_selector"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/buttonDefaultParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/default_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line9" />

        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/line4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <Spinner
            android:id="@+id/spinnerGenre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/line5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line4" />

        <TextView
            android:id="@+id/textViewYearCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/any_info"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/yearsSeekBar"
            app:layout_constraintStart_toStartOf="@+id/spinnerGenre"
            app:layout_constraintTop_toBottomOf="@+id/line5" />

        <TextView
            android:id="@+id/textViewRatingCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/any_info"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/ratingSeekBar"
            app:layout_constraintStart_toStartOf="@+id/textViewYearCurrent"
            app:layout_constraintTop_toBottomOf="@+id/line7" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>